# TAR_P3

./: .gitignore  Instalacion.md  README.md  connect_ros.sh  run.sh  run_no_nvidia.sh
catkin_ws/devel/include/mi_accion/: FibonacciAction.h  FibonacciActionFeedback.h  FibonacciActionGoal.h  FibonacciActionResult.h  FibonacciFeedback.h  FibonacciGoal.h  FibonacciResult.h  ejFibonacciAction.h  ejFibonacciActionFeedback.h  ejFibonacciActionGoal.h  ejFibonacciActionResult.h  ejFibonacciFeedback.h  ejFibonacciGoal.h  ejFibonacciResult.h
catkin_ws/devel/include/p2pkg/: MiMensaje.h
catkin_ws/devel/include/primer_paquete/: miMensaje.h
catkin_ws/devel/include/servicio_suma/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h
catkin_ws/devel/lib/p2pkg/: nodopub_ejercicio2.py  nodosub_ejercicio2.py
catkin_ws/devel/lib/p3_pkg/: dibuja_mov.py
catkin_ws/devel/lib/pkgconfig/: mi_accion.pc  p2pkg.pc  p3_pkg.pc  primer_paquete.pc  servicio_suma.pc
catkin_ws/devel/lib/turtlebot_actions/: find_fiducial_pose  turtlebot_move_action_server
catkin_ws/src/maze_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/maze_pkg/src/: res_maze.py
catkin_ws/src/mi_accion/: CMakeLists.txt  package.xml
catkin_ws/src/mi_accion/action/: ejFibonacci.action
catkin_ws/src/mi_accion/src/: ejercicios_fibClient.py  ejercicios_fibServer.py  fib_client.py  fib_server.py
catkin_ws/src/p2pkg/: CMakeLists.txt  package.xml
catkin_ws/src/p2pkg/launch/: launch_ejercicio3.launch  launch_ejercicio4.launch
catkin_ws/src/p2pkg/src/: nodopub_ejercicio2.py  nodosub_ejercicio2.py
catkin_ws/src/p3_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/p3_pkg/src/: aparcamiento.py  dibuja_mov.py  movimiento.py
catkin_ws/src/primer_paquete/: CMakeLists.txt  package.xml
catkin_ws/src/primer_paquete/launch/: mi_launch.launch
catkin_ws/src/primer_paquete/msg/: miMensaje.msg
catkin_ws/src/primer_paquete/src/: nodo_envia.py
catkin_ws/src/servicio_suma/src/: add_two_ints_client.py  add_two_ints_server.py
parte2/: Dockerfile  run.sh
ros2_ws/install/battery_act/lib/: battery_charger.py  battery_client.py
ros2_ws/install/service_temp/lib/: client.py  server.py
ros2_ws/log/: latest_build
ros2_ws/src/battery_act/: CMakeLists.txt  package.xml
ros2_ws/src/battery_act/scripts/: battery_charger.py  battery_client.py
ros2_ws/src/my_py_pkg/: package.xml  setup.py
ros2_ws/src/my_py_pkg/my_py_pkg/: talker.py
ros2_ws/src/practicatar/: package.xml  setup.cfg  setup.py
ros2_ws/src/service_temp/: CMakeLists.txt  package.xml
ros2_ws/src/service_temp/service_temp/: client.py  server.py
servicio_suma/src/: add_two_ints_client.py  add_two_ints_server.py
slam_pkg/: CMakeLists.txt  package.xml
slam_pkg/Maps/: ej1.pgm  ej1.yaml  ej2.pgm  ej2.yaml  ej3.pgm  ej3.yaml  mz2.pgm  mz2.yaml  prueba.pgm
slam_pkg/bagfiles/: prueba0.bag
slam_pkg/worlds/: mi_mundo.world  mi_mundo_obstaculos.world
(+261 files in other folders)
