<?xml version="1.0"?>
<package format="3">
  <name>service_temp</name>
  <version>0.0.0</version>
  <description>Servicio de conversión de temperatura</description>
  <maintainer email="tu_email@example.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- ESTE TAG es imprescindible aquí -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- y aquí también -->
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
